syntax = "proto3";

package yandex.cloud.priv.dns.v1.inner;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/dns/v1/inner;dns";
option java_outer_classname = "PFFS";

service FeatureFlagsService {
  rpc Get (GetFeatureFlagsRequest) returns (GetFeatureFlagsResponse);
}

message GetFeatureFlagsRequest {
  string fqdn = 1;
}

message GetFeatureFlagsResponse {
  map<string, string> feature_flags = 1;
}
