syntax = "proto3";

package yandex.cloud.clouddesktop.v1.api;

import "google/protobuf/timestamp.proto";

import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/clouddesktop/v1;clouddesktop";
option java_package = "yandex.cloud.api.clouddesktop.v1";

// A desktop resource.
message Desktop {

    // Desktop ID.
    string id = 1;

    // ID of the folder that the desktop belongs to.
    string folder_id = 2;

    // ID of the desktop group that the desktop belongs to.
    string desktop_group_id = 3;

    // Creation timestamp in [RFC3339](https://www.ietf.org/rfc/rfc3339.txt) text format.
    google.protobuf.Timestamp created_at = 4;

    enum Status {
        STATUS_UNSPECIFIED = 0;

        // Desktop is being created.
        CREATING = 1;

        // Desktop is ready to use.
        ACTIVE = 2;

        // Desktop is being deleted.
        DELETING = 3;
    }

    // Status of the desktop.
    Status status = 5;

    // Name of the desktop.
    string name = 11;

    // Resources of the desktop.
    Resources resources = 21;

    repeated NetworkInterface network_interfaces = 22;

    repeated User users = 23;
}

message Resources {
    int64 memory = 1 [(value) = ">=1"];
    int64 cores = 2 [(value) = ">=1"];
    int64 core_fraction = 3 [(value) = "0-100"];
}

message User {
    // Identity of the access binding.
    string subject_id = 1 [(required) = true];
}

message NetworkInterface {
    string network_id = 1 [(required) = true, (length) = "<=50"];
    string subnet_id = 2 [(required) = true, (length) = "<=50"];
}
